Fixed dynamic header on mobile, deactivated said function on screens larger than 768px

--- a/Scss/header.scss
+++ b/Scss/header.scss
@@ -90,6 +90,10 @@ header {
             font-size: large;
         }
 
+        &.hidden {
+            transform: translateY(0);
+        }
+
         &.sticky {
             background-color: var(--color-bright);
 
